MOB_360_2017_1a_V7/objects/Route_TotYR_Actuals__c.object
<CustomObject>
    <description>This object is used in Sales Volume dashboard calculation on M360 application.</description>
    <fields>
        <fullName>ACTUALS__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>ACTUALS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrandGroupID__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>BrandGroupID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandGroupName__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>BrandGroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LY_VOLUME__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>LY VOLUME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REMAINING__c</fullName>
        <formula>TARGET__c -  ACTUALS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REMAINING</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTE_KEY__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>RTE_KEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTE_NBR__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>RTE_NBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Route_TotYR_Actuals</relationshipLabel>
        <relationshipName>Route_TotYR_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TARGET__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>TARGET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSLRNbrRouteNbr__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <externalId>true</externalId>
        <label>WSLRNbrRouteNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_NBR__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>WSLR_NBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_PARTY_ID__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>WSLR_PARTY_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route_TotYR_Actuals</label>
    <nameField>
        <label>Route_TotYR_Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route_TotYR_Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>